tdf#121620 Opening Image tab of Bullets and Numbering dialog resets selection

regression from
	commit 39e6bae2c4be24a3aad5ef8cd37d3d83c41a4abe
	loplugin:useuniqueptr in cui numpages

Change-Id: I77e16880d0590793545da38b7a3c8c5d2626d8f5